apps/homelab-api/base/networkpolicy-allow-egress-kubernetes-api-https.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-to-kubernetes-api-https
  namespace: homelab-api
spec:
  podSelector:
    matchLabels:
      homelab.io/kube-api-reader: "true"
  policyTypes:
    - Egress
  egress:
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
      ports:
        - protocol: TCP
          port: 443
